--- a/flaskps/templates/auth/login.html
+++ b/flaskps/templates/auth/login.html
@@ -70,6 +70,9 @@
                                                     <div class="col-md-12 pb-4 text">    
                                                         <a href="">¿Olvidó su contraseña?</a>
                                                     </div-->
+                                                    <div class="col-md-12">
+                                                        {% include 'auth/panel_components/mensajes_alertas_red.html' %}
+                                                    </div>
 
                                                     <!-- Sign in button -->
                                                     <div class="col-md-12 mt-5">
