--- a/flaskps/templates/auth/panel_components/empleados.html
+++ b/flaskps/templates/auth/panel_components/empleados.html
@@ -1,6 +1,7 @@
     <div class="subItem">
         <div class="row">
             <div class="col-md-12 mb-3">
+                <h2 class="mb-2">Docentes</h2>
                 <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#myModal">
                     <i class="fas fa-user-plus mr-2"></i> Nuevo Estudiante
                 </button>
