--- a/flaskps/templates/auth/panel_components/estado_sitio.html
+++ b/flaskps/templates/auth/panel_components/estado_sitio.html
@@ -1,19 +1,16 @@
 <div class="subItem">
     <div class="row">
-        <div class="col-md-12">
-        {% include 'auth/panel_components/mensajes_alertas.html' %}
-        </div>
         <div class="col-md-3 pt-2">
             <form action="{{ url_for('change_site_status') }}" method="POST">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="h5 m-0">Estado del sitio</h1>
+                        <h1 class="h5 my-0">Estado del sitio</h1>
                     </div>
                     <div class="card-body p-4">
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <select name="estado_sitio" class="browser-default custom-select">
-                                    {% if infositio == 1 %}
+                                    {% if infositio[0].activo == 1 %}
                                     <option value="0">Inactivo</option>
                                     <option value="1" selected>Activo</option>
                                     {% else %}
@@ -23,7 +20,26 @@
                                 </select>
                             </div>
                             <div class="col-md-12 text-right">
-                                <button type="submit" class="btn btn-info">Guardar</button>                                             
+                                <button type="submit" class="btn btn-primary">Guardar</button>                                             
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-md-2 pt-2">
+            <form action="{{ url_for('change_site_status') }}" method="POST">
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="h5 my-0">Paginación</h1>
+                    </div>
+                    <div class="card-body p-4">
+                        <div class="row">
+                            <div class="col-md-12 mb-3">
+                                <input type="number" min="0" name="paginacion" class="form-control" value="{{ infositio[0].paginacion }}">
+                            </div>
+                            <div class="col-md-12 text-right">
+                                <button type="submit" class="btn btn-primary">Guardar</button>                                             
                             </div>
                         </div>
                     </div>
