--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -71,15 +71,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label>Localidad</label>
-                                                <select name="localidad_id" class="browser-default custom-select" required="1">
-                                                    <option selected disabled>Seleccionar</option>
-                                                    {% for localidad in localidades %}
-                                                    {% if localidad.id == row.localidad_id %}
-                                                    <option value="{{localidad.id}}" selected>{{localidad.nombre}}</option>
-                                                    {% else %}
-                                                    <option value="{{localidad.id}}">{{localidad.nombre}}</option>
-                                                    {% endif %}
-                                                    {% endfor %}
+                                                <select name="localidad_id" class="localidades browser-default custom-select" required="1">
+                                                    
                                                 </select>
                                             </div>
                                         </div>
@@ -226,11 +219,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <label>Localidad</label>
-                                        <select name="localidad_id" class="browser-default custom-select" required="1">
-                                            <option selected disabled>Seleccionar</option>
-                                            {% for localidad in localidades %}
-                                            <option value="{{localidad.id}}">{{localidad.nombre}}</option>
-                                            {% endfor %}
+                                        <select name="localidad_id" class="localidades browser-default custom-select" required="1">
                                         </select>
                                     </div>
                                 </div>
