--- a/flaskps/templates/auth/panel_components/empleados.html
+++ b/flaskps/templates/auth/panel_components/empleados.html
@@ -66,11 +66,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label>Localidad</label>
-                                                <select name="localidad_id" class="browser-default custom-select" required="1">
-                                                    <option selected disabled>Seleccionar</option>
-                                                    {% for localidad in localidades %}
-                                                    <option value="{{localidad.id}}">{{localidad.nombre}}</option>
-                                                    {% endfor %}
+                                                <select name="localidad_id" class="localidades browser-default custom-select" required="1">
+
                                                 </select>
                                             </div>
                                         </div>
@@ -100,11 +97,8 @@
                                         <div class="form-group row">
                                             <div class="col-md-6">
                                                 <label>Tipo Documento</label>
-                                                <select name="tipo_doc_id" class="browser-default custom-select" required="1">
-                                                    <option selected disabled>Seleccionar</option>
-                                                    {% for tipo_doc in tipo_docs %}
-                                                    <option value="{{tipo_doc.id}}">{{tipo_doc.nombre}}</option>
-                                                    {% endfor %}
+                                                <select name="tipo_doc_id" class="tipo_docs browser-default custom-select" required="1">
+                                                    
                                                 </select>
                                             </div>
                                             <div class="col-md-6">
@@ -170,11 +164,8 @@
                                     </div>
                                     <div class="col-md-6">
                                         <label>Localidad</label>
-                                        <select name="localidad_id" class="browser-default custom-select" required="1">
-                                            <option selected disabled>Seleccionar</option>
-                                            {% for localidad in localidades %}
-                                            <option value="{{localidad.id}}">{{localidad.nombre}}</option>
-                                            {% endfor %}
+                                        <select name="localidad_id" class="localidades browser-default custom-select" required="1">
+                                            
                                         </select>
                                     </div>
                                 </div>
@@ -200,11 +191,8 @@
                                 <div class="form-group row">
                                     <div class="col-md-6">
                                         <label>Tipo Documento</label>
-                                        <select name="tipo_doc_id" class="browser-default custom-select" required="1">
-                                            <option selected disabled>Seleccionar</option>
-                                            {% for tipo_doc in tipo_docs %}
-                                            <option value="{{tipo_doc.id}}">{{tipo_doc.nombre}}</option>
-                                            {% endfor %}
+                                        <select name="tipo_doc_id" class="tipo_docs browser-default custom-select" required="1">
+
                                         </select>
                                     </div>
                                     <div class="col-md-6">
