crud completo terminado de estudiantes y docentes + api en javascript

--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -401,7 +401,7 @@ a:hover {
     Panel de docente
 --------------------------------------------------------------*/
 .panel {
-    background: #fcfcfc;
+    background: #faf6ee;
 }
 .panel nav .nav-link {
     color: var(--black-3);
