--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -31,31 +31,55 @@
                     for(i = 0; i < localidades.length; i++) {
                         localidades[i].innerHTML = out;
                     }
+
+                    //Agrega el elemento a los listados
+                    var min_loc = document.getElementsByClassName('min_loc');
+                    for(i = 0; i < min_loc.length; i++) {
+                        for(j = 0; j < arr.length; j++) {
+                            if (arr[j].id == min_loc[i].innerHTML){
+                                min_loc[i].innerHTML = arr[j].nombre;
+                                break;
+                            }
+                        }   
+                    }
                 }
 
                 //Llamado a la API de localidades
-                var xmlhttp = new XMLHttpRequest();
-                var url = "https://api-referencias.proyecto2019.linti.unlp.edu.ar/tipo-documento";
+                var xmlhttp2 = new XMLHttpRequest();
+                var url2 = "https://api-referencias.proyecto2019.linti.unlp.edu.ar/tipo-documento";
 
-                xmlhttp.onreadystatechange = function() {
+                xmlhttp2.onreadystatechange = function() {
                     if (this.readyState == 4 && this.status == 200) {
-                        var myArr = JSON.parse(this.responseText);
-                        myFunction2(myArr);
+                        var myArr2 = JSON.parse(this.responseText);
+                        myFunction2(myArr2);
+                        return myArr2;
                     }
                 };
-                xmlhttp.open("GET", url, true);
-                xmlhttp.send();
+                xmlhttp2.open("GET", url2, true);
+                xmlhttp2.send();
 
                 function myFunction2(arr) {
-                    var out = "";
+                    //Arma los desplegables
+                    var out2 = "";
                     var i;
                     for(i = 0; i < arr.length; i++) {
-                        out += '<option value="' + arr[i].id + '">' + arr[i].nombre + '</option>'
+                        out2 += '<option value="' + arr[i].id + '">' + arr[i].nombre + '</option>'
                     }
-                    //document.getElementById("id-loc").innerHTML = out;
+
                     var tipo_docs = document.getElementsByClassName('tipo_docs');
                     for(i = 0; i < tipo_docs.length; i++) {
-                        tipo_docs[i].innerHTML = out;
+                        tipo_docs[i].innerHTML = out2;
+                    }
+
+                    var min_dni = document.getElementsByClassName('min_dni');
+                    //Agrega el elemento a los listados
+                    for(i = 0; i < min_dni.length; i++) {
+                        for(j = 0; j < arr.length; j++) {
+                            if (arr[j].id == min_dni[i].innerHTML){
+                                min_dni[i].innerHTML = arr[j].nombre;
+                                break;
+                            }
+                        }   
                     }
                 }
 
